Adding Output Images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
             <p>The Best</p>
             <h2>Work Hard To Get Better Life</h2>
             <p>
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id rem fugiat delectus illo at perspiciatis esse itaque! Rerum sapiente deserunt hic ipsa, libero sit atque velit minus cum incidunt. Porro.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id rem
+              fugiat delectus illo at perspiciatis esse itaque! Rerum sapiente
+              deserunt hic ipsa, libero sit atque velit minus cum incidunt.
+              Porro.
             </p>
             <button>Get Started</button>
           </div>
@@ -50,7 +53,6 @@
       </section>
 
       <section class="hero about">
-
         <div class="right">
           <img src="./assets/about.png" alt="" />
         </div>
@@ -60,15 +62,20 @@
             <p>About Us</p>
             <h2>Welcome To Our Fitness Gym</h2>
             <p>
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Id rem fugiat delectus illo at perspiciatis esse itaque! Rerum sapiente deserunt hic ipsa, libero sit atque velit minus cum incidunt. Porro.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id rem
+              fugiat delectus illo at perspiciatis esse itaque! Rerum sapiente
+              deserunt hic ipsa, libero sit atque velit minus cum incidunt.
+              Porro.
             </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, animi!</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+              animi!
+            </p>
             <button>Explore More</button>
           </div>
         </div>
-        
       </section>
-     
+
       <footer>
         <p>Copyright ©MrTJ'sGym 2022</p>
         <p>
